Bug 168351 - Missing letter spacing/glyph scaling in the last paragraph line
Summary: Missing letter spacing/glyph scaling in the last paragraph line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Paragraph-Alignment 167648 168251
  Show dependency treegraph
 
Reported: 2025-09-10 13:49 UTC by László Németh
Modified: 2025-09-17 20:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
spacing_in_last_para_line.fodt: test document (6.65 KB, application/vnd.oasis.opendocument.text-flat-xml)
2025-09-10 13:50 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2025-09-10 13:49:16 UTC
Description:
If the last two lines of the paragraph are compressed into a single line by minimum letter spacing or minimum glyph scaling, instead of negative kerning or compression, positive kerning and expansion are applied.

Steps to Reproduce:
1. Open the attached test document.

Actual Results:
No word spacing because of bad letter spacing.

Expected Results:
Desired word spacing.


Reproducible: Always


User Profile Reset: No

Additional Info:
Follow-up to fixes for Bug 167648 and Bug 168251.
Comment 1 László Németh 2025-09-10 13:50:40 UTC
Created attachment 202776 [details]
spacing_in_last_para_line.fodt: test document
Comment 2 Commit Notification 2025-09-12 13:28:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/33f20d0a0fb32bf4452c15c6ae0e7c85b2ee6d46

tdf#168351 sw letter spacing: fix spaces in the last line

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.