tdf#168351 sw letter spacing: fix spaces in the last line

Minimum letter spacing and glyph scaling were applied in
the last paragraph line incompletely, because of missing
update of the break width, when the last two paragraph
lines were compressed into a single one. This resulted in
calculating more blank space, than available, and positive
kerning, also glyph expansion with missing word spacing and
overlapping words, instead of negative kerning and glyph
compression for the desired word spacing.

Follow-up to commit 45ec7bd76196dcc60b4c2db2f6f00623ecbaf5a4
"tdf#168251 cui offapi xmloff sw glyph scaling: extend UNO/UX/ODF",
commit 3c53797210bf0a4e3ffb36ed2beac4d5ce229ff2
"tdf#167648 sw letter spacing: implement minimum letter spacing"
and commit f83a04c51056445bbf947a31c8c1866a5c30bef1
"tdf#167648 cui offapi xmloff sw: add DTP-feature maximum letter
spacing".

Change-Id: I0d72a6fa2f9d945bd463fbe162ef5d0eb377f49a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190862
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins