sw/qa/extras/layout/layout3.cxx
@@ -697,6 +697,44 @@ CPPUNIT_TEST_FIXTURE(SwLayoutWriter3, testTdf168251)
     }
 }
 
+CPPUNIT_TEST_FIXTURE(SwLayoutWriter3, testTdf168351)
+{
+    createSwDoc("tdf168351.fodt");
+    // Ensure that all text portions are calculated before testing.
+    SwDocShell* pShell = getSwDocShell();
+
+    // Dump the rendering of the first page as an XML file.
+    std::shared_ptr<GDIMetaFile> xMetaFile = pShell->GetPreviewMetaFile();
+    MetafileXmlDump dumper;
+
+    xmlDocUniquePtr pXmlDoc = dumpAndParse(dumper, *xMetaFile);
+    CPPUNIT_ASSERT(pXmlDoc);
+
+    // Find the first text array action
+    for (size_t nAction = 0; nAction < xMetaFile->GetActionSize(); nAction++)
+    {
+        auto pAction = xMetaFile->GetAction(nAction);
+        if (pAction->GetType() == MetaActionType::TEXTARRAY)
+        {
+            auto pTextArrayAction = static_cast<MetaTextArrayAction*>(pAction);
+            auto pDXArray = pTextArrayAction->GetDXArray();
+
+            // There should be 38 characters on the first line
+            CPPUNIT_ASSERT_EQUAL(size_t(38), pDXArray.size());
+
+            // This was 830, now 789, according to the applied negative letter spacing
+            CPPUNIT_ASSERT_LESS(sal_Int32(800), sal_Int32(pDXArray[7]));
+
+            // restore desired word spacing between the first two words
+            // This was -6.5 (missing word spacing), now 57,
+            // according to the applied letter spacing
+            CPPUNIT_ASSERT_GREATER(sal_Int32(50), sal_Int32(pDXArray[9]) - sal_Int32(pDXArray[8]));
+
+            break;
+        }
+    }
+}
+
 CPPUNIT_TEST_FIXTURE(SwLayoutWriter3, testTdf164499)
 {
     createSwDoc("tdf164499.docx");
